--- a/styles/header.module.css
+++ b/styles/header.module.css
@@ -1,12 +1,23 @@
 .header {
     position: fixed;
     width: 100%;
+    /*height: 65px;*/
     z-index: 2000;
     top: 0;
     left: 0;
     right: 0;
     border: 0;
+    display: flex;
 }
-.wrap_header {
-    height: 60px;
+
+.header_logo {
+
+}
+
+.header_menu {
+
+}
+
+.header_icons {
+
 }
